--- a/main.html
+++ b/main.html
@@ -3,11 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>FizzBuzz</title>
-	<link rel="stylesheet" href="css/normalize.css">
-	<script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
 	<script src="js/app.js"></script>
 </head>
 <body>
-
+<div class="main"</div>
 </body>
 </html>
